alignment fix for hero image

--- a/style.css
+++ b/style.css
@@ -282,7 +282,7 @@ section{
 }
 
 .img-hero img{
-    top: 50px;
+    top: 64px;
     position: relative;
     width: 400px;
     height: auto;
